RefactoringEngine gets an oil change